Main App Updates
Filter by Fires and FMA. URL definition inside IF ELIF ELSE statements.
Graphs change colors when Toggle switches are selected.
Add html.Div to align html.P text.

--- a/assets/bWLwgP.css
+++ b/assets/bWLwgP.css
@@ -27,7 +27,7 @@
 ____________________________________________________*/
 /*// These variables override the custom color */
 $body-bg: #111111;
-$body-color: #111111;
+$body-color: #FFFFFF;
 
 
 
@@ -166,7 +166,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: rgb(50, 50, 50); }
+  color: rgb(184, 184, 184); }
 
 
 /* Typography
